@@ -10,11 +10,11 @@ class Applicant < ActiveRecord::Base
   attr_accessible :accepted, :address1, :address2, :advisor, :cv_number, :applicant_type, :appointment_type, :city, :concentration_major, :country, :coursework_completed, :current_institution,
                   :current_title, :cv, :degree_sought, :degree_type, :degrees, :department_program, :disabled, :disadvantaged, :enrolled, :expected_year, :first_name, :last_name,
                   :middle_initial, :notes, :offered, :phone, :preferred_preceptor_id, :presentations, :previous_institutions, :primary_preceptor_id, :pubs_not_prev_rep, :research_description,
-                  :research_project_title, :residency, :review_date, :reviewed, :secondary_preceptor_id, :source_of_support, :state, :status, :summer, :supported_by_tg, :training_grant_years, :tge, :thesis,
+                  :research_project_title, :residency, :review_date, :reviewed, :secondary_preceptor_id, :source_of_support, :state, :status, :supported_by_tg, :training_grant_years, :tge, :thesis,
                   :trainee_code, :training_period_end_date, :training_period_start_date, :urm, :year, :year_department_program, :zip_code, :desired_start_date, :marital_status, :assurance, :reference_number
 
   STATUS = ["current", "former"].collect{|i| [i,i]}
-  APPLICANT_TYPE = ["predoc", "postdoc"].collect{|i| [i,i]}
+  APPLICANT_TYPE = ["predoc", "postdoc", "summer"].collect{|i| [i,i]}
   MARITAL_STATUS = ["single", "married", "divorced", "widowed"].collect{|i| [i,i]}
 
   before_save :set_submitted_at
