@@ -24,7 +24,6 @@
       <th>Previous institutions</th>
       <th>Review date</th>
       <th>Reviewed</th>
-      <th>Summer</th>
       <th>TGE</th>
       <th>Thesis</th>
       <th>URM</th>
@@ -86,7 +85,6 @@
         <td><%= applicant.previous_institutions %></td>
         <td><%= applicant.review_date %></td>
         <td style="text-align:center"><%= simple_check applicant.reviewed %></td>
-        <td style="text-align:center"><%= simple_check applicant.summer %></td>
         <td style="text-align:center"><%= simple_check applicant.tge %></td>
         <td><%= applicant.thesis %></td>
         <td style="text-align:center"><%= simple_check applicant.urm %></td>
