@@ -46,13 +46,6 @@
 
 <div class="control-group checkbox">
   <div class="controls">
-    <%= f.check_box :summer %>
-    <%= f.label :summer %>
-  </div>
-</div>
-
-<div class="control-group checkbox">
-  <div class="controls">
     <%= f.check_box :tge %>
     <%= f.label :tge, "US Citizen or Permanent Resident" %>
     <span class="help-block">Please note that only citizens and permanent residents are eligible for training grant support</span>
