@@ -10,9 +10,6 @@
   <dt>Applicant type</dt>
   <dd><%= applicant.applicant_type %></dd>
 
-  <dt>Summer</dt>
-  <dd><%= simple_check applicant.summer %></dd>
-
   <dt>US Citizen or Permanent Resident</dt>
   <dd><%= simple_check applicant.tge %></dd>
 
